# MMICT-ip_service

./: .gitignore  Dockerfile  README.md  gunicorn_config.py  masked_image.tiff  processing_test.py  pyproject.toml  requirements.txt  server.py  service_test.html
.github/workflows/: main.yml
ip-docker/: Dockerfile  app.py  pyproject.toml  requirements.txt
ip-docker/tests/: processing_test.py
ip-docker/tests/res/: classification_test_result.dump  labels.geojson
ip-docker/util/: S3Access.ini  S3ImgGetter.py  features.py  image_processor.py  s3_access.cfg  s3_img_getter.py
ip_service/: server.py
mm_image_processing/: __init__.py  pyproject.toml  server.py  server_old.py
mm_image_processing/util/: __init__.py  blue.tiff  download_image.py  download_image_x.py  green.tiff  image_processor.py  models.py  nir.tiff  red.tiff  rgb.tiff  rgb_0_1.tiff  s3_access.cfg  s3_img_getter.py  temp.tiff
mm_image_processing/webpageTester/: service_test.html
service/: ImgProcessor.py  S3ImgGetter.py  image_processor.py
webpageTester/: service_test.html  websocket.html
