[tool.poetry]
name = "MM-ip-service"
version = "0.1.0"
description = "IP service for MM team in E4E"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.3.1"
requests = "2.28.2"
boto3 = "1.26.120"
numpy = "1.24.3"
rioxarray = "0.14.1"
xarray = "2023.4.2"
distancerasters = "0.3.2"
opencv-contrib-python = "4.7.0.72"
dask = "2023.4.0"
simplejson = "3.19.1"
Flask-Cors = "3.0.10"
flask-sock = "0.6.0"
h11 = "0.14.0"
websockets = "11.0.2"
geopandas = "0.12.2"
pandas = "1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
